# ghidra

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  ANALYSIS_FINDINGS.md  ANALYSIS_ISSUES_FOUND.md  COMPILATION_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PROGRESS_REPORT.md  CONTRIBUTING.md  CONTRIBUTOR  CParserBuild.bat  Containerfile  DECOMPILER_WARNINGS_FIX.md  DECOMPILER_WARNING_FIX.md  DISCLAIMER.md  DOCUMENTATION  DebuggerDevGuide.md  DecodeBitMasks.java  DecompilerBuild.bat  DecompilerBuildDocs.bat  DevGuide.md  ENHANCED_TRACKING_IMPLEMENTATION.md  EXECUTIVE_SUMMARY.md  FAILURE_PATTERN_ANALYSIS.md  FINAL_SESSION_REPORT.md  FUNCTION_SIGNATURE_ANALYZER_FINDINGS.md  FUNCTION_SIGNATURE_ISSUE.md  FUNCTION_SIGNATURE_ROOT_CAUSE.md  FixFunctionSignatures.java  GITHUB_PR_TEMPLATE.md  GP_RESOLUTION_IMPLEMENTED.md  GenericStructFromFieldUsage.java  HEXAGON_README.md  HexagonArchitectureAnalysis.md  HexagonConditionalNewValue.md  HexagonImplementationGuide.md  HexagonNewValueRestrictions.md  (+70 more)
Ghidra/Debug/Debugger-agent-dbgeng/src/main/py/: README.md  pyproject.toml
Ghidra/Debug/Debugger-agent-dbgeng/src/main/py/src/dbgmodel/: idatamodelmanager.py  idebughost.py  ihostdatamodelaccess.py  iiterableconcept.py  ikeyenumerator.py  imodeliterator.py  imodelobject.py  irawenumerator.py
Ghidra/Debug/Debugger-agent-dbgeng/src/main/py/src/ghidradbg/: __init__.py  arch.py  build_xml.py  commands.py  dbgeng_base.xml  hooks.py  libraries.py  methods.py  schema.xml  schema_exdi.xml  util.py
Ghidra/Debug/Debugger-agent-dbgeng/src/main/py/src/ghidrattd/: arch.py  commands.py  hooks.py  libraries.py  methods.py  schema.xml  util.py
Ghidra/Debug/Debugger-agent-gdb/src/main/py/: README.md  pyproject.toml
Ghidra/Debug/Debugger-agent-gdb/src/main/py/ghidragdb/: hooks.py  methods.py  parameters.py
Ghidra/Debug/Debugger-agent-gdb/src/main/py/src/ghidragdb/: __init__.py  arch.py  build_xml.py  commands.py  gdb_base.xml  hooks.py  methods.py  parameters.py  schema.xml  util.py  wine.py
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/: CMakeLists.txt  LLDBWrapJava.cpp
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/bindings/: CMakeLists.txt
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/bindings/java/: CMakeLists.txt  java-typemaps.swig  java.swig
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/cmake/modules/: FindJavaAndSwig.cmake  LLDBConfig.cmake
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/include/: jni.h  jni_md.h
Ghidra/Debug/Debugger-agent-lldb/src/llvm/lldb/source/API/: CMakeLists.txt  SBDebugger.cpp  liblldb.exports
Ghidra/Debug/Debugger-agent-lldb/src/main/py/: MANIFEST.in  README.md  pyproject.toml
Ghidra/Debug/Debugger-agent-lldb/src/main/py/ghidralldb/: hooks.py
Ghidra/Debug/Debugger-agent-lldb/src/main/py/src/ghidralldb/: arch.py  build_xml.py  commands.py  hooks.py  lldb_base.xml  methods.py  parameters.py  schema.xml  util.py
Ghidra/Debug/Debugger-agent-x64dbg/src/main/py/: LICENSE  MANIFEST.in  README.md  pyproject.toml
Ghidra/Debug/Debugger-agent-x64dbg/src/main/py/src/ghidraxdbg/: __init__.py  arch.py  build_xml.py  commands.py  hooks.py  methods.py  schema.xml  util.py  x64dbg_base.xml
Ghidra/Debug/Debugger-rmi-trace/src/main/py/: README.md  pyproject.toml
Ghidra/Debug/Debugger-rmi-trace/src/main/py/src/ghidratrace/: client.py  display.py  merge.ps1  merge_xml.py  sch.py  setuputils.py  util.py
Ghidra/Features/Decompiler/src/decompile/: .cproject  .gitignore  Cargo.toml  build.gradle  build.rs
Ghidra/Features/Decompiler/src/decompile/cpp/: .gitignore  Doxyfile  HANDOFF.md  INTRA_FUNCTION_PARALLEL_PLAN.md  INTRA_FUNCTION_PARALLEL_RULE_AUDIT.md  Makefile  action.cc  action.hh  address.cc  address.hh  analyzesigs.cc  analyzesigs.hh  architecture.cc  architecture.hh  audit_rules.py  bench_intra_parallel.sh  bench_minops.sh  bench_real.sh  bench_stress.sh  bfd_arch.cc  bfd_arch.hh  bitfield.cc  bitfield.hh  block.cc  block.hh  block_conflict.cc  block_conflict.hh  blockaction.cc  blockaction.hh  bridge.cc  bridge.hh  callgraph.cc  callgraph.hh  capability.cc  capability.hh  cast.cc  cast.hh  codedata.cc  codedata.hh  comment.cc  (+221 more)
Ghidra/Features/Decompiler/src/decompile/cpp/include/ghidra/: action.hh  address.hh  analyzesigs.hh  architecture.hh  bfd_arch.hh  block.hh  blockaction.hh  callgraph.hh  capability.hh  cast.hh  codedata.hh  comment.hh  comment_ghidra.hh  condexe.hh  context.hh  (+89 more)
Ghidra/Features/Decompiler/src/decompile/cpp/research/: APPLES_BENCH_20260518.md  D5_LOCK_ELISION_20260518.md
Ghidra/Features/Decompiler/src/decompile/datatests/: bitfields.xml  bitfields2.xml  boolless.xml  ccmp.xml  concat.xml  concatsplit.xml  condconst.xml  condconst2.xml  condconstsub.xml  condexesub.xml  condmulti.xml  convert.xml  copytrim.xml  deadvolatile.xml  deindirect.xml  deindirect2.xml  displayformat.xml  divopt.xml  doublemove.xml  dupptr.xml  elseif.xml  enum.xml  floatcast.xml  floatconv.xml  floatprint.xml  forloop1.xml  forloop_loaditer.xml  forloop_thruspecial.xml  forloop_varused.xml  forloop_withskip.xml  gp.xml  heapstring.xml  ifswitch.xml  impliedfield.xml  indproto.xml  injectoverride.xml  inline.xml  inlinetarget.xml  longdouble.xml  loopcomment.xml  (+50 more)
Ghidra/Features/Decompiler/src/decompile/src/: bridge.rs  cli.rs  main.rs  model.rs  patch.rs  serde_int.rs  xml.rs
Ghidra/Features/Decompiler/src/decompile/src/cli/: load_file.rs
Ghidra/Features/Decompiler/src/decompile/unittests/: riscv_isaext.cc  testcirclerange.cc  testfloatemu.cc  testfuncproto.cc  testmarshal.cc  testmultiprec.cc  testparamstore.cc  testtypes.cc
Ghidra/Features/Decompiler/src/decompile/zlib/: README.txt  adler32.c  deflate.c  deflate.h  gzguts.h  inffast.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  zconf.h  zlib.h  zutil.c  zutil.h
Ghidra/Features/PyGhidra/src/main/py/: README.md  pyproject.toml  setup.py
Ghidra/Features/PyGhidra/src/main/py/src/: __init__.py
Ghidra/Features/PyGhidra/src/main/py/tests/: test_argparser.py  test_converters.py  test_core.py  test_plugin.py
(+26362 files in other folders)
