[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidradbg"
version = "12.0"
authors = [
  { name="Ghidra Development Team" },
]
description = "Ghidra's Plugin for dbgeng"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ghidratrace==12.0",
    "Pybag>=2.2.16",
    "capstone>=5.0.6",
    "comtypes",
    "pywin32",
    "win32more"
]

[project.urls]
"Homepage" = "https://github.com/NationalSecurityAgency/ghidra"
"Bug Tracker" = "https://github.com/NationalSecurityAgency/ghidra/issues"

[tool.setuptools.package-data]
ghidradbg = ["*.tlb", "py.typed"]

[tool.setuptools]
include-package-data = true
